# codeastra-python-

./: pyproject.toml
codeastra/: __init__.py  client.py  middleware.py  wrappers.py
examples/: crewai_example.py  langchain_example.py  pipeline_example.py
