[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeastra"
version = "1.5.0"
description = "Blind Agent SDK — drop-in middleware for LangChain, CrewAI, AutoGPT. Two lines makes any agent blind to real data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "langchain", "crewai", "privacy", "hipaa", "security", "tokenization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.2.0", "langchain-core>=0.2.0"]
crewai    = ["crewai>=0.30.0"]
all       = ["langchain>=0.2.0", "langchain-core>=0.2.0", "crewai>=0.30.0"]

[project.urls]
Homepage      = "https://codeastra.dev"
Documentation = "https://docs.codeastra.dev"
Repository    = "https://github.com/codeastra/codeastra-python"

[tool.setuptools.packages.find]
where = ["."]
include = ["codeastra*"]
